--- a/CobroCoactivo/web/index.xhtml
+++ b/CobroCoactivo/web/index.xhtml
@@ -2,7 +2,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
     <h:head>
         <link rel="shortcut icon" href="#{request.contextPath}/recursos/images/favicon.png" type="image/x-icon"/>
         <link rel="icon" href="#{request.contextPath}/recursos/images/favicon.png" type="image/x-icon"/>
@@ -38,10 +39,10 @@
         </style>
     </h:head>
     <h:body>
-        <!-- <p:ajaxStatus onstart="PF('statusDialog').show()"  onsuccess="PF('statusDialog').hide()" />
+         <p:ajaxStatus onstart="PF('statusDialog').show()"  onsuccess="PF('statusDialog').hide()" />
           <p:dialog widgetVar="statusDialog" modal="true" draggable="false" closable="false" resizable="false" showHeader="false" >
               <p:graphicImage url="/recursos/images/loading.gif" style="width: 25px;"/> Iniciando Sesión...
-          </p:dialog> -->
+          </p:dialog> 
         <div class="container">
             <div class="row">
                 <center>
@@ -98,7 +99,7 @@
 
                         <div class="form-group">
                             <center>
-                                <!--  <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />  -->
+                               <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
                             </center>
                         </div>
                     </h:form><!-- /form -->
