--- a/CobroCoactivo/web/paginas/gestionUsuarios/consultarUsuarios.xhtml
+++ b/CobroCoactivo/web/paginas/gestionUsuarios/consultarUsuarios.xhtml
@@ -6,7 +6,8 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:a="http://xmlns.jcp.org/jsf/passthrough">
+      xmlns:a="http://xmlns.jcp.org/jsf/passthrough"
+      xmlns:jsf="http://xmlns.jcp.org/jsf">
 
     <body>
         <ui:composition template="./../../plantillas/PlantillaGeneral.xhtml">
@@ -75,10 +76,11 @@
                                         <div class="row">
                                             <thead>
                                                 <tr>
-                                                    <th class="col-md-3">Nombre usuario</th>
-                                                    <th class="col-md-3">Estado</th>
-                                                    <th class="col-md-3">Persona</th>
-                                                    <th class="col-md-3">Acción</th>
+                                                    <th class="col-md-4">Nombre usuario</th>
+                                                    <th class="col-md-2">Estado</th>
+                                                    <th class="col-md-2">Persona</th>
+                                                    <th class="col-md-2">Acción</th>
+
                                                 </tr>
                                             </thead>
                                             <tbody>
@@ -91,7 +93,7 @@
                                                                 <f:setPropertyActionListener value="#{usuario.personas}" target="#{requestBean.personas}"/>
                                                                 <f:ajax event="click" listener="#{requestBean.ejemplo(usuario.personas)}"></f:ajax>
                                                                 <f:ajax event="click" listener="#{detallePersonasBean.init()}"></f:ajax>
-                                                                #{usuario.personas.nombre1} #{usuario.personas.apellido1}
+                                                                    #{usuario.personas.nombre1} #{usuario.personas.apellido1}
                                                             </h:commandLink>
                                                         </td>
                                                         <td class="row">
@@ -108,6 +110,10 @@
                                     </table>
                                 </h:panelGroup>
                             </div>
+                            <h:commandLink class="float" onclick="$('#modalRegistrarUser').modal('show');">
+                                <i class="fa fa-plus my-float"></i>
+                                <f:ajax event="click" ></f:ajax>
+                            </h:commandLink>
                         </section>
                     </div>
                 </h:form>
