--- a/CobroCoactivo/web/paginas/gestionExpedientes/gestionExpedientes.xhtml
+++ b/CobroCoactivo/web/paginas/gestionExpedientes/gestionExpedientes.xhtml
@@ -30,6 +30,7 @@
                                     <h3 class="box-title">Busquedas</h3>
                                 </div>
                                 <div class="box-body">
+                                    <p:media value="#{gestionExpedientesBean.visualizarPDF}" width="500px" height="500px" player="pdf"></p:media>
                                     <div class="row">
                                         <div class="col-md-12">
                                             <div class="nav-tabs-custom" >
@@ -104,6 +105,7 @@
                                                                 </span>
                                                             </td>
                                                             <td>
+
                                                                 <h:commandLink class="fa fa-eye col-sm-2">
                                                                     <f:ajax event="click" listener="#{gestionExpedientesBean.buscarArchivo(listaDetalleExpediente.detexpId)}" render="frmExpedientes:pnlSubCarpetas frmExpedientes:pnlArchivo"/>
                                                                 </h:commandLink>
@@ -145,10 +147,13 @@
                                                                 </h:commandLink>
                                                             </td>
                                                         </tr>
+
                                                     </c:forEach>
+
                                                 </tbody>
                                             </div>
                                         </table>
+
                                     </h:panelGroup>
                                 </h:panelGrid>
                             </div>
