--- a/CobroCoactivo/web/plantillas/PlantillaGeneral.xhtml
+++ b/CobroCoactivo/web/plantillas/PlantillaGeneral.xhtml
@@ -103,7 +103,7 @@
 
     </h:head>
 
-    <h:body class="hold-transition skin-red sidebar-mini" onload="bloquear()">
+    <h:body class="hold-transition skin-red sidebar-mini" onload="bloquear();test()">
         <p:ajaxStatus  onstart="PF('statusDialog').show()"   onsuccess="PF('statusDialog').hide()"/> 
         <p:dialog position="center,center" showHeader="false"  widgetVar="statusDialog" modal="true" closable="false"  draggable="false" resizable="false">
             <p:graphicImage url="/recursos/images/loading.gif" style="width: 25px;"/><p>Espere...</p>
@@ -144,49 +144,6 @@
                                         </li>
                                     </c:if>
 
-
-                                    <!-- Notifications: style can be found in dropdown.less -->
-                                    <li class="dropdown notifications-menu">
-                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                            <i class="fa fa-bell-o"></i>
-                                            <span class="label label-warning">10</span>
-                                        </a>
-                                        <ul class="dropdown-menu">
-                                            <li class="header">You have 10 notifications</li>
-                                            <li>
-                                                <!-- inner menu: contains the actual data -->
-                                                <ul class="menu">
-                                                    <li>
-                                                        <a href="#">
-                                                            <i class="fa fa-users text-aqua"></i> 5 new members joined today
-                                                        </a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#">
-                                                            <i class="fa fa-warning text-yellow"></i> Very long description here that may not fit into the
-                                                            page and may cause design problems
-                                                        </a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#">
-                                                            <i class="fa fa-users text-red"></i> 5 new members joined
-                                                        </a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#">
-                                                            <i class="fa fa-shopping-cart text-green"></i> 25 sales made
-                                                        </a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#">
-                                                            <i class="fa fa-user text-red"></i> You changed your username
-                                                        </a>
-                                                    </li>
-                                                </ul>
-                                            </li>
-                                            <li class="footer"><a href="#">View all</a></li>
-                                        </ul>
-                                    </li>
                                     <!-- Tasks: style can be found in dropdown.less -->
 
                                     <!-- Profile DropDown -->
