arreglado bug de la sessiones

--- a/CobroCoactivo/web/paginas/gestionServicios/gestionAcuerdosPagos.xhtml
+++ b/CobroCoactivo/web/paginas/gestionServicios/gestionAcuerdosPagos.xhtml
@@ -11,7 +11,7 @@
     <body>
         <ui:composition template="./../../plantillas/PlantillaGeneral.xhtml">
             <ui:define name="content">
-                <h:form id="frmCargarPersonas">
+                <h:form id="frmGestionPagos">
                     <div class="content-wrapper">
                         <section class="content-header">
                             <h1>
@@ -32,30 +32,31 @@
                                     <div class="box-title">
                                         <h3 class="">Personas </h3>
                                     </div>
-                                    <h:commandButton value="Sincronizar todos" class="btn btn-success center-block" style="float: right ">
-                                        <f:ajax event="click" listener="#{gestionCargarPersonasBean.sincronizarTodasDeudas()}" render="formPlanTrabajo:contenedor"></f:ajax>
-                                        
-                                    </h:commandButton> 
+                                    <!-- <button class="btn btn-success center-block" style="float: right ">Sincronizar todos</button> -->
                                 </div>
                                 <h:panelGroup id="tblPersona">
-                                    <table class="table table-bordered table-hover" id="dataTableDetalle">
+                                    <table class="table table-bordered table-hover">
                                         <thead>
                                             <tr>
+                                                <th>Tipo</th>
+                                                <th>Numero</th>
                                                 <th>Nombres</th>
                                                 <th>Apellidos</th>
-                                                <th>Mostrar deudas</th>
+                                                <th>Mostrar acuerdo pagos</th>
                                             </tr>
                                         </thead>
                                         <tbody>
-                                            <ui:repeat value="#{gestionCargarPersonasBean.listPersonas}" var="persona">
+                                            <ui:repeat value="#{gestionPagosbean.listPersonas}" var="persona">
                                                 <tr>
+                                                    <td>#{persona.tipoDocumentos.descripcion}</td>
+                                                    <td>#{persona.documento}</td>
                                                     <td>
                                                         #{persona.nombre1} #{persona.nombre2} 
                                                     </td>
                                                     <td> #{persona.apellido1} #{persona.apellido2}</td>
                                                     <td>
-                                                        <h:commandLink class="fa fa-eye col-sm-4" onclick="$('#modalDeuda').modal('show')">
-                                                            <f:ajax event="click" listener="#{gestionCargarPersonasBean.verDeudas(persona)}" render="frmCargarPersonas:modalDeudaContent">
+                                                        <h:commandLink class="fa fa-eye col-sm-4" onclick="$('#modalPagos').modal('show')">
+                                                            <f:ajax event="click" listener="#{gestionPagosbean.verPagos(persona)}" render="frmGestionPagos:modalPagosContent">
 
                                                             </f:ajax>
                                                         </h:commandLink>
@@ -66,11 +67,11 @@
                                     </table>
                                 </h:panelGroup>
                             </div>
-                            <div class="modal fade"  tabindex="-1" id="modalDeuda"  aria-hidden="true" role="dialog" aria-labelledby="myModalLabel">
+                            <div class="modal fade"  tabindex="-1" id="modalPagos"  aria-hidden="true" role="dialog" aria-labelledby="myModalLabel">
                                 <div class="modal-dialog">
-                                    <div class="modal-content" jsf:id="modalDeudaContent">
+                                    <div class="modal-content" jsf:id="modalPagosContent">
                                         <div class="modal-header">
-                                            <h4 class="modal-title" id="myModalLabel">Deudas #{gestionCargarPersonasBean.personas.nombre1} #{gestionCargarPersonasBean.personas.apellido1}</h4>
+                                            <h4 class="modal-title" id="myModalLabel">Pagos #{gestionCargarPersonasBean.personas.nombre1} #{gestionCargarPersonasBean.personas.apellido1}</h4>
 
                                         </div>
                                         <div class="row">
@@ -82,29 +83,26 @@
                                             <table class="table table-hover table-bordered">
                                                 <thead>
                                                     <tr>
-                                                        <th>Valor</th>
-                                                        <th>Tipo</th>
+                                                        <th>Numero factura</th>
                                                         <th>Fecha</th>
-                                                        <th>Referencia</th>
+                                                        <th>Total</th>
                                                     </tr>
                                                 </thead>
                                                 <tbody>
 
-                                                    <ui:repeat value="#{gestionCargarPersonasBean.listDeudas}" var="deuda">
+                                                    <ui:repeat value="#{gestionPagosbean.listPagos}" var="pago">
                                                         <tr>
                                                             <td>
-                                                                #{deuda.valor}
+                                                                #{pago.numero}
                                                             </td>
-                                                            <td>#{deuda.tipoDeudas.codigo}</td>
                                                             <td>
-                                                                <h:outputText value="#{deuda.fechaDeudas}">
+                                                                <h:outputText value="#{pago.fecha}">
                                                                     <f:convertDateTime pattern="dd-MM-yyyy" />
                                                                 </h:outputText>
 
                                                             </td>
-                                                            <td>
-                                                                #{deuda.referencia}
-                                                            </td>
+                                                            <td>#{pago.valor}</td>
+
                                                         </tr>
                                                     </ui:repeat>
                                                 </tbody>
@@ -120,7 +118,7 @@
                                                 </div>
                                                 <div class="col-lg-4">
                                                     <h:commandLink value="Sincronizar" id="btnGuardarPlanTrabajo" class="btn btn-success">
-                                                        <f:ajax event="click" render="formPlanTrabajo:contenedor formPlanTrabajo:modalPlanTrabajo" listener="#{gestionCargarPersonasBean.sincronizarDeuda()}" execute="formPlanTrabajo:modalPlanTrabajo"/>
+                                                        <f:ajax event="click" render="formPlanTrabajo:contenedor formPlanTrabajo:modalPlanTrabajo" listener="#{gestionPagosbean.sincronizarPagos()}" execute="formPlanTrabajo:modalPlanTrabajo"/>
                                                     </h:commandLink>
                                                 </div>
                                             </div>
